# meta-hackathon-open-env

./: .env  Dockerfile  README.md  app.py  baseline.py  curriculum.py  dashboard.html  environment.py  fix_verifier.py  free_review.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  reward.py  run_test.py  tasks.py  tmpclaude-46e1-cwd
static/: index.html
