[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "An OpenEnv-compliant code review environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "openai==1.51.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[tool.uv]
dev-dependencies = []
